// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser call 1`] = `
Object {
  "end": Object {
    "column": 5,
    "line": 1,
    "offset": 4,
  },
  "name": "foo",
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "call",
}
`;

exports[`parser full 1`] = `
Object {
  "body": Array [
    Object {
      "end": Object {
        "column": 1,
        "line": 4,
        "offset": 12,
      },
      "start": Object {
        "column": 1,
        "line": 2,
        "offset": 1,
      },
      "type": "comment",
      "value": "comment",
    },
    Object {
      "end": Object {
        "column": 4,
        "line": 4,
        "offset": 15,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 4,
          "offset": 13,
        },
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 12,
        },
        "type": "identifier",
        "value": "a",
      },
      "op": "+",
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 4,
          "offset": 15,
        },
        "start": Object {
          "column": 3,
          "line": 4,
          "offset": 14,
        },
        "type": "identifier",
        "value": "a",
      },
      "start": Object {
        "column": 1,
        "line": 4,
        "offset": 12,
      },
      "type": "operator",
    },
    Object {
      "end": Object {
        "column": 4,
        "line": 5,
        "offset": 19,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 5,
          "offset": 17,
        },
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 16,
        },
        "type": "identifier",
        "value": "a",
      },
      "op": "-",
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 5,
          "offset": 19,
        },
        "start": Object {
          "column": 3,
          "line": 5,
          "offset": 18,
        },
        "type": "literal",
        "value": 2,
      },
      "start": Object {
        "column": 1,
        "line": 5,
        "offset": 16,
      },
      "type": "operator",
    },
    Object {
      "end": Object {
        "column": 4,
        "line": 6,
        "offset": 23,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 6,
          "offset": 21,
        },
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 20,
        },
        "type": "identifier",
        "value": "a",
      },
      "op": "*",
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 6,
          "offset": 23,
        },
        "start": Object {
          "column": 3,
          "line": 6,
          "offset": 22,
        },
        "type": "identifier",
        "value": "c",
      },
      "start": Object {
        "column": 1,
        "line": 6,
        "offset": 20,
      },
      "type": "operator",
    },
    Object {
      "end": Object {
        "column": 12,
        "line": 7,
        "offset": 35,
      },
      "left": Object {
        "end": Object {
          "column": 6,
          "line": 7,
          "offset": 29,
        },
        "start": Object {
          "column": 1,
          "line": 7,
          "offset": 24,
        },
        "type": "identifier",
        "value": "hello",
      },
      "op": "/",
      "right": Object {
        "end": Object {
          "column": 12,
          "line": 7,
          "offset": 35,
        },
        "start": Object {
          "column": 7,
          "line": 7,
          "offset": 30,
        },
        "type": "identifier",
        "value": "world",
      },
      "start": Object {
        "column": 1,
        "line": 7,
        "offset": 24,
      },
      "type": "operator",
    },
    Object {
      "end": Object {
        "column": 4,
        "line": 9,
        "offset": 40,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 9,
          "offset": 38,
        },
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 37,
        },
        "type": "literal",
        "value": 1,
      },
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 9,
          "offset": 40,
        },
        "start": Object {
          "column": 3,
          "line": 9,
          "offset": 39,
        },
        "type": "identifier",
        "value": "a",
      },
      "start": Object {
        "column": 1,
        "line": 9,
        "offset": 37,
      },
      "type": "pushpop",
    },
    Object {
      "end": Object {
        "column": 3,
        "line": 10,
        "offset": 43,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 10,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 41,
        },
        "type": "identifier",
        "value": "a",
      },
      "right": null,
      "start": Object {
        "column": 1,
        "line": 10,
        "offset": 41,
      },
      "type": "pushpop",
    },
    Object {
      "end": Object {
        "column": 4,
        "line": 11,
        "offset": 47,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 11,
          "offset": 45,
        },
        "start": Object {
          "column": 1,
          "line": 11,
          "offset": 44,
        },
        "type": "identifier",
        "value": "a",
      },
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 11,
          "offset": 47,
        },
        "start": Object {
          "column": 3,
          "line": 11,
          "offset": 46,
        },
        "type": "identifier",
        "value": "b",
      },
      "start": Object {
        "column": 1,
        "line": 11,
        "offset": 44,
      },
      "type": "pushpop",
    },
    Object {
      "body": Array [
        Object {
          "end": Object {
            "column": 6,
            "line": 14,
            "offset": 57,
          },
          "left": Object {
            "end": Object {
              "column": 4,
              "line": 14,
              "offset": 55,
            },
            "start": Object {
              "column": 3,
              "line": 14,
              "offset": 54,
            },
            "type": "identifier",
            "value": "a",
          },
          "right": Object {
            "end": Object {
              "column": 6,
              "line": 14,
              "offset": 57,
            },
            "start": Object {
              "column": 5,
              "line": 14,
              "offset": 56,
            },
            "type": "identifier",
            "value": "b",
          },
          "start": Object {
            "column": 3,
            "line": 14,
            "offset": 54,
          },
          "type": "pushpop",
        },
      ],
      "end": Object {
        "column": 2,
        "line": 15,
        "offset": 59,
      },
      "stack": "a",
      "start": Object {
        "column": 1,
        "line": 13,
        "offset": 49,
      },
      "type": "loop",
    },
    Object {
      "body": Array [
        Object {
          "end": Object {
            "column": 6,
            "line": 18,
            "offset": 72,
          },
          "left": Object {
            "end": Object {
              "column": 4,
              "line": 18,
              "offset": 70,
            },
            "start": Object {
              "column": 3,
              "line": 18,
              "offset": 69,
            },
            "type": "identifier",
            "value": "a",
          },
          "op": "+",
          "right": Object {
            "end": Object {
              "column": 6,
              "line": 18,
              "offset": 72,
            },
            "start": Object {
              "column": 5,
              "line": 18,
              "offset": 71,
            },
            "type": "identifier",
            "value": "b",
          },
          "start": Object {
            "column": 3,
            "line": 18,
            "offset": 69,
          },
          "type": "operator",
        },
      ],
      "end": Object {
        "column": 2,
        "line": 19,
        "offset": 74,
      },
      "name": "foo",
      "start": Object {
        "column": 1,
        "line": 17,
        "offset": 61,
      },
      "type": "function",
    },
    Object {
      "end": Object {
        "column": 5,
        "line": 21,
        "offset": 80,
      },
      "name": "foo",
      "start": Object {
        "column": 1,
        "line": 21,
        "offset": 76,
      },
      "type": "call",
    },
  ],
  "end": Object {
    "column": 1,
    "line": 22,
    "offset": 81,
  },
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "program",
}
`;

exports[`parser function 1`] = `
Object {
  "body": Array [
    Object {
      "end": Object {
        "column": 6,
        "line": 3,
        "offset": 12,
      },
      "left": Object {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 10,
        },
        "start": Object {
          "column": 3,
          "line": 3,
          "offset": 9,
        },
        "type": "identifier",
        "value": "a",
      },
      "op": "+",
      "right": Object {
        "end": Object {
          "column": 6,
          "line": 3,
          "offset": 12,
        },
        "start": Object {
          "column": 5,
          "line": 3,
          "offset": 11,
        },
        "type": "identifier",
        "value": "b",
      },
      "start": Object {
        "column": 3,
        "line": 3,
        "offset": 9,
      },
      "type": "operator",
    },
  ],
  "end": Object {
    "column": 2,
    "line": 4,
    "offset": 14,
  },
  "name": "foo",
  "start": Object {
    "column": 1,
    "line": 2,
    "offset": 1,
  },
  "type": "function",
}
`;

exports[`parser function 2`] = `
Object {
  "body": Array [],
  "end": Object {
    "column": 7,
    "line": 1,
    "offset": 6,
  },
  "name": "foo",
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "function",
}
`;

exports[`parser loop 1`] = `
Object {
  "body": Array [
    Object {
      "end": Object {
        "column": 4,
        "line": 3,
        "offset": 7,
      },
      "left": Object {
        "end": Object {
          "column": 2,
          "line": 3,
          "offset": 5,
        },
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 4,
        },
        "type": "identifier",
        "value": "a",
      },
      "op": "+",
      "right": Object {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 7,
        },
        "start": Object {
          "column": 3,
          "line": 3,
          "offset": 6,
        },
        "type": "identifier",
        "value": "b",
      },
      "start": Object {
        "column": 1,
        "line": 3,
        "offset": 4,
      },
      "type": "operator",
    },
  ],
  "end": Object {
    "column": 2,
    "line": 4,
    "offset": 9,
  },
  "stack": "a",
  "start": Object {
    "column": 1,
    "line": 2,
    "offset": 1,
  },
  "type": "loop",
}
`;

exports[`parser loop 2`] = `
Object {
  "body": Array [],
  "end": Object {
    "column": 4,
    "line": 1,
    "offset": 3,
  },
  "stack": "a",
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "loop",
}
`;

exports[`parser operators 1`] = `
Object {
  "end": Object {
    "column": 4,
    "line": 1,
    "offset": 3,
  },
  "left": Object {
    "end": Object {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "type": "identifier",
    "value": "a",
  },
  "op": "+",
  "right": Object {
    "end": Object {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": Object {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "type": "identifier",
    "value": "b",
  },
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "operator",
}
`;

exports[`parser operators 2`] = `
Object {
  "end": Object {
    "column": 4,
    "line": 1,
    "offset": 3,
  },
  "left": Object {
    "end": Object {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "type": "identifier",
    "value": "a",
  },
  "op": "+",
  "right": Object {
    "end": Object {
      "column": 4,
      "line": 1,
      "offset": 3,
    },
    "start": Object {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "type": "literal",
    "value": 2,
  },
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "operator",
}
`;

exports[`parser operators 3`] = `
Object {
  "end": Object {
    "column": 3,
    "line": 1,
    "offset": 2,
  },
  "left": Object {
    "end": Object {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
    "type": "identifier",
    "value": "a",
  },
  "op": "?",
  "right": null,
  "start": Object {
    "column": 1,
    "line": 1,
    "offset": 0,
  },
  "type": "operator",
}
`;
